@@ -44,6 +44,7 @@ depth: 1
  * Allow subclasses of `PagesAPIViewSet` override default Page model via the `model` attribute (Neeraj Yetheendran, Herbert Poul)
  * Allow `ModelViewSet` to be used with models that have non-integer primary keys (Sage Abdullah)
  * Add the ability to set an external link/text for promoted search result entries (TopDevPros, Brad Busenius)
+ * Add support for subject and body in the Email link chooser form (TopDevPros, Alexandre Joly)
 
 ### Bug fixes
 
